Set up Codecov with OIDC authentication (no tokens!)
- Upgraded to codecov-action@v5 with OIDC
- Added .codecov.yml configuration (80% target, 2% threshold)
- Added OIDC permissions to workflow (id-token: write)
- No secrets required - GitHub/Codecov trust via OIDC
- Multi-persona analysis of 30 CodeQL alerts + 5 workflow failures

Global infrastructure created:
- ~/.claude/templates/codecov.yml
- ~/.claude/templates/workflows/test-coverage-codecov.yml
- ~/.claude/templates/workflows/test-coverage-python.yml
- ~/.claude/scripts/setup-codecov.sh
- ~/.claude/docs/CODECOV-SETUP.md (complete guide)

Next: Activate repo on Codecov.io (https://about.codecov.io/sign-up/)
Then coverage uploads automatically on every push/PR

--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ "main" ]
 
+# REQUIRED: OIDC permissions for Codecov v5 (no token needed!)
+permissions:
+  id-token: write      # Required for OIDC authentication
+  contents: read       # Required to checkout code
+  pull-requests: write # Required to comment on PRs
+
 jobs:
   test-coverage:
     name: Run Tests & Report Coverage
@@ -46,15 +52,15 @@ jobs:
           echo "⚠️ No coverage report generated (tests may have failed)" >> $GITHUB_STEP_SUMMARY
         fi
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
+    - name: Upload coverage to Codecov (OIDC - No Token Required)
+      uses: codecov/codecov-action@v5
       if: always()
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        use_oidc: true                         # Use OIDC authentication (modern, no secrets!)
         files: ./coverage/lcov.info
         flags: unittests
         name: codecov-chrome-dev-assist
-        fail_ci_if_error: false
+        fail_ci_if_error: false                # Don't fail CI if Codecov has issues
         verbose: true
 
     - name: Upload coverage artifact
