--- a/.github/workflows/critical-checks.yml
+++ b/.github/workflows/critical-checks.yml
@@ -84,7 +84,8 @@ jobs:
           echo "Check 1: Unsafe echo with variables..."
           if find . -name "*.sh" -type f \
             -not -path './.archive/*' \
-            -not -path './test-rules-compliance.sh' \
+            -not -path './test-rules-compliance.sh*' \
+            -not -path './.github/*' \
             -exec grep -Hn 'echo.*\$' {} \; 2>/dev/null | grep -v '^\s*#'; then
             echo "❌ FAIL: Found unsafe 'echo \$var' usage"
             echo "   Fix: Use 'printf \"%s\" \"\$var\"' instead"
@@ -98,7 +99,7 @@ jobs:
           echo "Check 2: Unsafe regex grep matching..."
           if find . -name "*.sh" -type f \
             -not -path './.archive/*' \
-            -not -path './test-rules-compliance.sh' \
+            -not -path './test-rules-compliance.sh*' \
             -not -path './.github/*' \
             -exec grep -Hn 'grep[[:space:]]\+-E' {} \; 2>/dev/null; then
             echo "❌ FAIL: Found regex grep usage"
