--- a/.github/workflows/critical-checks.yml
+++ b/.github/workflows/critical-checks.yml
@@ -97,12 +97,15 @@ jobs:
           # Check 2: Regex grep (should use literal)
           echo ""
           echo "Check 2: Unsafe regex grep matching..."
-          if find . -name "*.sh" -type f \
+          GREP_E_RESULTS=$(find . -name "*.sh" -type f \
             -not -path './.archive/*' \
             -not -path './test-rules-compliance.sh*' \
             -not -path './.github/*' \
-            -exec grep -Hn 'grep[[:space:]]\+-E' {} \; 2>/dev/null; then
-            echo "❌ FAIL: Found regex grep usage"
+            -exec grep -Hn 'grep[[:space:]]\+-E' {} \; 2>/dev/null || true)
+
+          if [ -n "$GREP_E_RESULTS" ]; then
+            echo "❌ FAIL: Found regex grep usage in:"
+            echo "$GREP_E_RESULTS"
             echo "   Fix: Use literal matching (grep -F) instead"
             FAILED=1
           else
